deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-rest
  labels:
    app: spring-rest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-rest
  template:
    metadata:
      labels:
        app: spring-rest
    spec:
      containers:
      - name: rest-basic
        image: dockermshiva444/springrest:v1
        ports:
        - containerPort: 8082
