service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-rest-service
spec:
  type: NodePort
  selector:
    app: spring-rest
  ports:
    - port: 80
      targetPort: 8081
      nodePort: 30007
